files/nodeapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app
  labels:
    app: my-node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-node-app
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:
      - name: my-node-app
        image: docker.io/thasir/nodeapp:v1
        ports:
        - containerPort: 6041
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"         
          limits:
            cpu: "500m"
            memory: "500Mi"
