files/nodeapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app-service
spec:
  type: NodePort
  selector:
    app: my-node-app
  ports:
    - protocol: TCP
      port: 6041
      targetPort: 6041
